--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Bob The Builder</title>
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<style>
+		</style>
 	</head>
 	<body>
 		<header>
 			<h1>Bob The Builder, LLC</h1>
 		</header>
-		<div class="container" style="background-color:salmon">
+		<div class="container">
 			<ul>
 				<li>Foundation</li>
-				<li><a href="#rebar"></a></li>
+				<li><a href="#rebar">Rebar</a></li>
 				<li>
 					<ol>
 						<li style="border: 1px solid black">Hammer</li>
@@ -33,6 +36,15 @@
 	  			<td>$4000</td>
 	  		</tr>
 	  	</table>
+	  </div>
+	  <div class="square">
+	  	Hello, I am square
+	  </div>
+	  <div class="squar">
+	  	I am square, too
+	  </div>
+	  <div class="rebar">
+	  	<h1>Hello Rebar</h1>
 	  </div>
 	</body>
 </html>
